@@ -2667,6 +2667,9 @@ fprintf(stderr, "*** Fdopen(%p,%s) %s\n", fd, fmode, fdbg(fd));
 	} else if (!strcmp(end, "lzdio")) {
 	    iof = lzdio;
 	    fd = iof->_fdopen(fd, zstdio);
+	} else if (!strcmp(end, "xzdio")) {
+	    iof = xzdio;
+	    fd = iof->_fdopen(fd, zstdio);
 #endif
 	} else if (!strcmp(end, "ufdio")) {
 	    iof = ufdio;
@@ -2837,6 +2840,8 @@ int Fflush(FD_t fd)
 #if defined(HAVE_LZMA_H)
     if (vh && fdGetIo(fd) == lzdio && lzdio->_flush != NULL)
 	return (*lzdio->_flush) ((void *)fd);
+    if (vh && fdGetIo(fd) == xzdio && xzdio->_flush != NULL)
+	return (*xzdio->_flush) ((void *)fd);
 #endif
 
     return 0;
@@ -2870,9 +2875,9 @@ int Ferror(FD_t fd)
 	    i--;	/* XXX fdio under bzdio always has fdno == -1 */
 #endif
 #if defined(HAVE_LZMA_H)
-	} else if (fps->io == lzdio) {
+	} else if (fps->io == lzdio || fps->io == xzdio) {
 	    ec = (fd->syserrno  || fd->errcookie != NULL) ? -1 : 0;
-	    i--;	/* XXX fdio under lzdio always has fdno == -1 */
+	    i--;	/* XXX fdio under lzdio/xzdio always has fdno == -1 */
 #endif
 	} else {
 	/* XXX need to check ufdio/gzdio/bzdio/fdio errors correctly. */
