@@ -1,5 +1,8 @@
 
 5.2a2 -> 5.2a3:
+    - proyvind: lzdio: set memlimit for decoding to 100MiB.
+    - proyvind: add support for xz for all tools shipped with rpm. 
+    - proyvind: lzdio: add support for xz format. (removes liblzma 4.999.3 support)
     - jbj: rpmgc: display errors with gcry_strerror().
     - jbj: rpmnss: eliminate pubkey type wrapping methods.
     - jbj: stub in pgpImpl{Set,Verify}ECDSA methods.
